Updated localization files up to 3/2/2022
Whats in this commit:
-- Updated Simplified Chinese translation.
-- Fixed some mistakes from Japanese translation.
-- Updated some English text to be up to date with the mod.

--- a/localization/eng/AigisMod-Monster-Strings.json
+++ b/localization/eng/AigisMod-Monster-Strings.json
@@ -28,9 +28,9 @@
   "aigisMod:Sanara": {
     "NAME": "Sanara",
     "MOVES": [
-      "Geotoken",
-      "Megalith",
-      "Master Geomancer"
+      "Geo Lay Line",
+      "Megalith Alaunus",
+      "Master Geomancy"
     ],
     "DIALOG": [
       ""
