--- a/localization/jpn/AigisMod-Power-Strings.json
+++ b/localization/jpn/AigisMod-Power-Strings.json
@@ -76,8 +76,8 @@
 
         "aigisMod:BloomPetal": {
                 "NAME": "ブルームペタル",
-                "DESCRIPTIONS": [" #b", " ターン後に、すべての敵に #b", " のダメージと #b2 #y脱力 と #b2 #y弱体 を与え、このパワーは取り除かれる。",
-                                 "ターン終了時に、すべての敵に #b", " のダメージと #b2 #y脱力 と #b2 #y弱体 を与え、このパワーは取り除かれる。"]
+                "DESCRIPTIONS": [" #b", " ターン後に、すべての敵に #b", " のダメージと #b2 #y脱力 and #b2 #y弱体 を与え、その後このパワーは取り除かれる。",
+                                 "ターン終了時に、すべての敵に #b", " のダメージと #b2 #y脱力 and #b2 #y弱体 を与え、その後このパワーは取り除かれる。"]
         },
         "aigisMod:CalamityAverting": {
                 "NAME": "避禍予見",
@@ -201,7 +201,7 @@
         },
         "aigisMod:Burn": {
                 "NAME": "バーン",
-                "DESCRIPTIONS": ["あなたのターン終了時に、 敵が攻撃を予定していた場合、 #yダメージ #b", " を与える。 バーンはターン開始時に #b1 減少する 。"]
+                "DESCRIPTIONS": ["あなたのターン終了時に、 敵が攻撃を予定していた場合、 #yダメージ #b", " を与える。 バーンは次のターン開始時に取り除かれる。"]
         },
         "aigisMod:Golemology": {
                 "NAME": "ゴーレム学",
