--- a/localization/zhs/AigisMod-Relic-Strings.json
+++ b/localization/zhs/AigisMod-Relic-Strings.json
@@ -3,26 +3,26 @@
     "NAME": "看板娘的劝诱",
     "FLAVOR": "茱诺：我家的生意还不错吧？毕竟有这么可爱的我在这呢!",
     "DESCRIPTIONS": [
-      "添加 #b1 张已升级的茱诺到牌组中 。在普通和精英战斗中额外获得一张 #y卡牌奖励 ，但只包含有普通卡牌。"
+      "添加 #b1 张已升级的茱诺到牌组中。在普通和精英战斗中额外获得一张 #y卡牌奖励 ，但只包含有普通卡牌。"
     ]
   },
   "aigisMod:HappyWishes": {
     "NAME": "恭贺的微笑",
-    "FLAVOR": "罗洁特: 我为了亡国而挥舞着我的剑",
+    "FLAVOR": "罗洁特: 我为了亡国而挥舞着我的剑。",
     "DESCRIPTIONS": [
-      "升级你牌组中的 #b1  张 #y罗洁特 或者将 #b1  张已升级的 #y罗洁特 加入牌组。当你将普通卡牌加入卡组时 #y升级  它。"
+      "升级你牌组中的 #b1 张 #y罗洁特 或者将 #b1 张已升级的 #y罗洁特 加入牌组。当你将普通卡牌加入卡组时 #y升级 它。"
     ]
   },
   "aigisMod:Ate": {
     "NAME": "吞食",
     "FLAVOR": "鬼忍姬: 惹恼鬼可是很恐怖的哦，所以不要摸我的头啊！",
     "DESCRIPTIONS": [
-      "当你抽到一张原始耗能为 #b4 的卡牌时获得 [E]  "
+      "当你抽到一张原始耗能为 #b4 的卡牌时获得 [E] 。"
     ]
   },
   "aigisMod:DarkGuild": {
     "NAME": "暗之公会的女仆",
-    "FLAVOR": "艾琳：照顾起居、暗杀、间谍，您可以随意吩咐。",
+    "FLAVOR": "艾琳: 照顾起居、暗杀、间谍，您可以随意吩咐。",
     "DESCRIPTIONS": [
       "当 #y暗杀 触发时抽 #b1 张卡，获得 #y8 金币 (金币每场战斗只会获得一次)。"
     ]
@@ -32,12 +32,12 @@
     "FLAVOR": "托娃：这就是时间支配者的力量。",
     "DESCRIPTIONS": [
       "#y减速 不会移除 #y缓慢 。",
-      " 当你打出一张 #y魔女 牌时，抽一张牌。"
+      "当你打出一张 #y魔女 牌时，抽一张牌。"
     ]
   },
   "aigisMod:WhiteWitch": {
     "NAME": "白之魔女的智慧",
-    "FLAVOR": "贝琳达：妈妈太爱管闲事了，我一个人能做到的。",
+    "FLAVOR": "贝琳达: 妈妈太爱管闲事了，我一个人能做到的。",
     "DESCRIPTIONS": [
       "战斗开始时敌人拥有 #b1 #y减速 (临时 #y缓慢 )。",
       "一回合内使用 #b2  张 #y魔女 牌后，对所有敌人造成 #b3 点伤害。"
@@ -52,17 +52,17 @@
   },
   "aigisMod:DarknessAura": {
     "NAME": "超级暗黑波动",
-    "FLAVOR": "暗黑骑士：我早已舍弃这条性命，你当我是弃子用也无妨.....",
+    "FLAVOR": "暗黑骑士：我早已舍弃这条性命，你当我是弃子用也无妨。",
     "DESCRIPTIONS": [
-      "如果你在回合中没有打出任何 #b攻击 牌，对所有敌人施加 #b1  层 #y虚弱 并且获得 #b8 点 #y格挡 。"
+      "如果你在回合中没有打出任何 #b攻击 牌，对所有敌人施加 #b1 层 #y虚弱 并且获得 #b8 点 #y格挡 。"
     ]
   },
   "aigisMod:AegisTreasure": {
     "NAME": "神器的继承者",
-    "FLAVOR": "安娜：这就是埃癸斯大人曾经使用过的武具。",
+    "FLAVOR": "安娜: 这就是埃癸斯大人曾经使用过的武具。",
     "DESCRIPTIONS": [
       "每场战斗开始时获得 #b1 点 #y敏捷 。将 #b1 张埃癸斯的神器加入卡组。",
-      "当你打出 #y技能  牌时获得 #b1 层 #y反击 。"
+      "当你打出 #y技能 牌时获得 #b1 层 #y反击 。"
     ]
   },
   "aigisMod:GodSlaying": {
@@ -83,9 +83,9 @@
   },
   "aigisMod:Fortress": {
     "NAME": "难攻不落的要塞",
-    "FLAVOR": "路易丝: 纵使国家已经不在，但我依然会为了还活着的人民而战。.",
+    "FLAVOR": "路易丝: 纵使国家已经不在，但我依然会为了还活着的人民而战。",
     "DESCRIPTIONS": [
-      "在每场战斗开始时获得 #b2  点 #y敏捷 。每回合开始时 #y随机 增加一张卡牌的 #y耗能  #b1 点直到回合结束"
+      "在每场战斗开始时获得 #b2 点 #y敏捷 。每回合开始时 #y随机 增加一张卡牌的 #y耗能 #b1 点直到回合结束。"
     ]
   },
   "aigisMod:RoyalHighness": {
@@ -97,7 +97,7 @@
   },
   "aigisMod:FidelityHarmony": {
     "NAME": "和之信义",
-    "FLAVOR": "辉夜：虽然我们是政治婚姻……但我很庆幸丈夫是你。",
+    "FLAVOR": "辉夜:虽然我们是政治婚姻…但我很庆幸丈夫是你。",
     "DESCRIPTIONS": [
       "将一张 #y辉夜 或者 #y日影 (如果你拥有辉夜)加入卡组。 你每打出 #b5 张 #y东国 或者 #y手里剑 获得 [E] 。战斗结束时重置此计数。"
     ]
@@ -113,10 +113,10 @@
     "NAME": "英杰水晶",
     "FLAVOR": "索拉斯: 我会给你'英杰水晶'作为征服高塔的奖励。",
     "DESCRIPTIONS": [
-      "赢得战斗之后获得 #b1 点。 ",
-      " 在地图界面（篝火，战斗，商店页面之外）， #y右击 此遗物并且花费 #b200 金币和 #b5 点来获得一张 #y罕见英杰卡牌 。添加相同卡牌时改为升级此卡牌。",
+      "赢得战斗之后获得 #b1 点。",
+      "在地图界面（篝火，战斗，商店页面之外），如果你有 #b200 金币和 #b5 点， #y右击 此遗物来获得一张 #y罕见英杰卡牌。 添加相同卡牌时改为升级此卡牌。",
       "我现在不能使用...",
-      "选择一张英杰牌加入你的卡组。"
+      "花费 200 金币和 5 点来 加入你的卡组一张罕见英杰卡牌。"
     ]
   },
   "aigisMod:DescendantHero": {
@@ -137,19 +137,19 @@
     "FLAVOR": "给予帝国最强之人的称号。",
     "DESCRIPTIONS": [
       "每赢得 #b5 场战斗添加一个永久效果，最多有 #b4 种效果。",
-      " NL #y1 。 当你打出技能牌时移除你的 #y易伤 。",
-      " NL #y2 。 当你打出攻击牌时移除你的 #y虚弱 。",
-      " NL #y3 。 #y打击 和 #y防御 额外获得 #b2  点伤害/格挡。",
-      " NL #y4 。 #y打击 造成 #y真实伤害 。"
+      " NL #y1。 当你打出技能牌时移除你的 #y易伤 。",
+      " NL #y2。 当你打出攻击牌时移除你的 #y虚弱 。",
+      " NL #y3。 #y打击 和 #y防御 额外获得 #b2 点伤害/格挡。",
+      " NL #y4。 #y打击 造成 #y真实伤害 。"
     ]
   },
 
   "aigisMod:ImperialTactics": {
     "NAME": "帝国元帅",
-    "FLAVOR": "被誉为不败的智囊的白之帝国首席军师",
+    "FLAVOR": "被誉为不败的智囊的白之帝国首席军师。",
     "DESCRIPTIONS": [
-      "当你打出 #y蕾欧娜 或是 #y蕾欧拉 时，获得 [E] ",
-      " NL 当你打出 #y防御 时获得 #b3  层反击。"
+      "当你打出 #y蕾欧娜 或是 #y蕾欧拉 时，获得 [E] 。",
+      " NL 当你打出 #y防御 时获得 #b3 层 y#反击。"
     ]
   },
   "aigisMod:ImperialKnight": {
@@ -164,13 +164,13 @@
     "NAME": "恶魔领域",
     "FLAVOR": "拉碧丝：我会把力量借给你的...感谢我吧。",
     "DESCRIPTIONS": [
-      "每场战斗的前 #b5 回合，获得 #b1  层伤害光环。",
+      "每场战斗的前 #b5 回合，获得 #b1 层伤害光环。",
       " NL 每回合结束时，如果你本回合中打出过 #y恶魔 能力牌，获得伤害光环点数的格挡。"
     ]
   },
   "aigisMod:ImperialAgent": {
     "NAME": "帝国暗部",
-    "FLAVOR": "维克托：没错，我就是曾经让帝国闻风丧胆的大恶人。",
+    "FLAVOR": "维克托:没错，我就是曾经让帝国闻风丧胆的大恶人。",
     "DESCRIPTIONS": [
       "当一名敌人被 #y击败 时, 对所有敌人施加 #b2 #y虚弱 和 #b2 #y易伤 。"
     ]
@@ -179,14 +179,14 @@
     "NAME": "白龙的布阵",
     "FLAVOR": "萨贝因： 这和种族与国家无关。因为我们的心都向着同一个未来。",
     "DESCRIPTIONS": [
-      "每场战斗 #y3 次：你在一回合内打出 #y帝国 和 #y恶魔 牌时获得 [E] "
+      "每场战斗 #y3 次：你在一回合内打出 #y帝国 和 #y恶魔 牌时获得 [E] 。"
     ]
   },
   "aigisMod:ImperialSniper": {
     "NAME": "帝国狙击兵",
-    "FLAVOR": "拉尔夫凭借其速射的非凡能力成为了狙击兵部队的队长。.",
+    "FLAVOR": "拉尔夫凭借其速射的非凡能力成为了狙击兵部队的队长。",
     "DESCRIPTIONS": [
-      "在 #yBoss 或是 #y精英 战斗中，如果你击败了任何敌人获得 [E] 和 #b2  点 #y力量 。"
+      "在 #yBoss 或是 #y精英 战斗中，如果你击败了任何敌人获得 [E] 和 #b2 点 #y力量 。"
     ]
   },
   "aigisMod:ImperialDeploy": {
@@ -202,15 +202,15 @@
     "FLAVOR": "德怀特：我的忠诚不会改变，所以我不会脱下这身铠甲。",
     "DESCRIPTIONS": [
       " #y防御 额外获得 #b1 点格挡。",
-      " NL 你每打出 #b8  张 #y帝国 牌，获得 #b4  点格挡。"
+      " NL 你每打出 #b8 张 #y帝国 牌，获得 #b4 点格挡。"
     ]
   },
   "aigisMod:DemonCommand": {
     "NAME": "魔神团长的号令",
-    "FLAVOR": "梅菲斯特：用武力解决一切是蛮族的思维。让我见识下你的智慧吧。",
+    "FLAVOR": "梅菲斯特:用武力抢夺一切太过野蛮.让我看看你的才智。",
     "DESCRIPTIONS": [
       "每场战斗一次， #y右击 此遗物， #y消耗 手牌中的 #b1 张卡。",
-      " NL 如果你通过此遗物消耗了 #y恶魔 卡牌，获得 #b1  点 #y力量 。"
+      " NL 如果你通过此遗物消耗了 #y恶魔 卡牌，获得 #b1 点 #y力量 。"
     ]
   },
   "aigisMod:AdamasChosen": {
@@ -243,7 +243,7 @@
   },
   "aigisMod:CursedBoundary": {
     "NAME": "咒界",
-    "FLAVOR": "卡塔拉:我所拥有的力量不过是家族传承下来的『破灭之力』的碎片罢了",
+    "FLAVOR": "卡塔拉:我所拥有的力量不过是家族传承下来的『破灭之力』的碎片罢了。",
     "DESCRIPTIONS": [
       "如果你拾起这个遗物时牌组中有诅咒牌，将 #b1 张 #y已升级 的 #y卡塔拉 加入牌组。",
       "每回合一次， #y右击 此遗物来弃置手中的 #b1 张诅咒牌，并对所有敌人造成 #y5 点伤害。",
@@ -289,12 +289,12 @@
     "NAME": "魔像增强",
     "FLAVOR": "安莉：将力量注入没有生命的物体，这就是赋予魔法的真谛，请尽情使用吧。",
     "DESCRIPTIONS": [
-      "每场战斗开始时将 #y魔像部件+ 放入手牌。当魔像部件被创造时，将之 #y升级 。"
+      "每场战斗开始时将 魔像部件+ 放入手牌。当魔像部件被创造时，将之 升级 。"
     ]
   },
   "aigisMod:WorldTree": {
     "NAME": "世界树的守护者",
-    "FLAVOR": "罗薇妮亚：王子每天都很辛苦呢。没事吧？有好好睡觉吗？",
+    "FLAVOR": "罗薇妮亚：没事吧？有好好睡觉吗？",
     "DESCRIPTIONS": [
       "每场战斗开始时拥有 #b8 层游侠陷阱。当你拥有 #y游侠陷阱 时， #y弓箭手 牌额外造成 #b1 点伤害。"
     ]
@@ -315,9 +315,9 @@
   },
   "aigisMod:Ifrit": {
     "NAME": "召唤伊芙利特",
-    "FLAVOR": "索拉诺：来吧，回应我的声音 ，炎之召唤兽伊芙利特!",
+    "FLAVOR": "索拉诺：来吧，回应我的声音，炎之召唤兽伊芙利特!",
     "DESCRIPTIONS": [
-      "每场战斗开始时对所有敌人施加 #b6  层 #y灼伤 。"
+      "每场战斗开始时对所有敌人施加 #b6 层 #y灼伤 。"
     ]
   },
   "aigisMod:UndeadWorld": {
@@ -330,9 +330,9 @@
   },
   "aigisMod:Daywalker": {
     "NAME": "日行者",
-    "FLAVOR": "伊甸：成为吸血鬼之前的记忆？，我不记得了……",
+    "FLAVOR": "伊甸：成为吸血鬼之前的记忆？，我不记得了…",
     "DESCRIPTIONS": [
-      "#y吸血鬼噬咬 伤害减少 #b3  点。 ",
+      "#y吸血鬼噬咬 伤害减少 #b3 点。",
       "对拥有 #y吸血鬼噬咬 的敌人攻击时，获得 #b1 点 #y临时生命 。"
     ]
   },
@@ -354,7 +354,7 @@
     "NAME": "埃癸斯神殿",
     "FLAVOR": "人们为了他们的英雄建造了一座巨大而又隐蔽的神殿，一座用来供奉女神埃癸斯的神殿。",
     "DESCRIPTIONS": [
-      "普通和精英战斗后收到含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。."
+      "普通和精英战斗后收到含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
     ]
   }
 }
