--- a/localization/zhs/AigisMod-UI-Strings.json
+++ b/localization/zhs/AigisMod-UI-Strings.json
@@ -1,16 +1,16 @@
 {
   "CharTooltipsID": {
     "TEXT": [
-      "魔女", "当敌人受到该牌攻击，获得临时 #y缓慢 .",
+      "魔女", "当敌人受到该牌攻击，获得临时 #y缓慢 。",
       "弓箭手", "此卡 #b无视 敌人的各种受到 #y攻击 是发动能力，比如荆棘。",
       "公主", "当你将 #y公主 牌加入卡组时，获得 #b1 点 #y最大生命 。",
       "不死", "此类型卡牌被 #y消耗 时，获得 #b额外 效果 。",
-      "黑色稀有度", "此类型卡牌在 #y升级 时会有 #y分支 路线。只有稀有牌会有此特性。",
-      "东国", " 此卡可以响应其他 #y东国 牌的效果",
+      "黑色稀有度", "此类型卡牌在 升级 时会有 分支 路线。只有稀有牌会有此特性。",
+      "东国", "此卡可以响应其他 东国 牌的效果。",
       "英杰", "此卡牌可以无数次升级。 NL 只能从 #y英杰水晶 遗物和 #y英杰之塔 事件中获得。",
-      "白之帝国", "可以与其他列出帝国牌的牌产生协同效果，只会出现在 #y皇帝 的卡牌池中",
-      "咒术师", "打出此卡时, 如果你的主卡组中没有此牌记述的 #y诅咒 牌，将其加入到你的主卡组。",
-      "恶魔", "回合开始时，如果此卡牌在消耗堆：使其 #y耗能 变为原始 #y耗能 -1并加入到手牌.",
+      "白之帝国", "可以与其他列出帝国牌的牌产生协同效果。",
+      "邪咒师", "打出此卡时, 如果你的主卡组中没有此牌记述的 #y诅咒 牌，将其加入到你的主卡组。",
+      "恶魔", "回合开始时，如果此卡牌在消耗堆：使其 耗能 变为原始 #y耗能 -1并加入到手牌。",
       "空域", "当打出此牌时，将1张 #y空中标记 洗入抽牌堆。每消耗一张 #y空中标记 伤害提升 #b1 点。",
       "亡灵法师", "每 #y消耗 一张 #y不死 牌提升1点伤害。 伤害未被格挡时，将 #b1 张 #y骷髅 加入手牌。"
     ]
@@ -18,7 +18,7 @@
 
   "AmbrosePDiscardAction": {
     "TEXT": [
-      "弃牌 (最多3张)",
+      "弃牌。 (最多3张)",
       "弃牌。"
     ]
 
@@ -97,7 +97,7 @@
 
   "YashimaAction": {
     "TEXT": [
-      "选择一张牌，复制其效果 。"
+      "选择一张牌，复制其效果。"
     ]
   },
 
@@ -111,13 +111,13 @@
 
   "RisleyAction": {
     "TEXT": [
-      "减少其耗能。"
+      "减少其花费。"
     ]
   },
 
   "ShizukaAction": {
     "TEXT": [
-      "弃牌。",
+      "丢弃。",
       "我的手牌中没有东国牌..."
     ]
   },
@@ -131,21 +131,21 @@
 
   "LilyAction": {
     "TEXT": [
-      "从手牌中打出 (自选)"
+      "从手牌中打出。 (自选)"
     ]
   },
 
   "BlitzkriegAction": {
     "TEXT": [
-      " 打出帝国牌。 (自选) ",
-      " 打出帝国牌。 (自选)",
-      "可以选择："
+      "打出帝国牌。 (自选)",
+      "打出帝国牌。 (自选)",
+      "可以选择： "
     ]
   },
 
   "LieselotteAction": {
     "TEXT": [
-      "弃牌。（自选）"
+      "弃牌。 (自选)"
     ]
   },
 
@@ -157,12 +157,12 @@
   },
   "AuroraAction": {
     "TEXT": [
-      "选择牌消耗。(自选)"
+      "选择牌 消耗。 (自选)"
     ]
   },
   "WhiteDevotionAction": {
     "TEXT": [
-      " 消耗 。 (自选)"
+      "消耗。 (自选)"
     ]
   },
   "CallingYouAction": {
@@ -181,12 +181,12 @@
   },
   "DemonCommandAction": {
     "TEXT": [
-      " 消耗。"
+      "消耗。"
     ]
   },
   "HelmineAction": {
     "TEXT": [
-      " 消耗。",
+      "消耗。",
       "我的手中没有牌..."
     ]
   },
@@ -200,7 +200,7 @@
   },
   "BelpheAction": {
     "TEXT": [
-      " 消耗 ", " 张牌。 (自选)", "我的弃牌堆里没有牌..."
+      "消耗 ", " 张牌。 (自选)", "我的弃牌堆里没有牌..."
     ]
   },
   "ImperialInventorAction": {
@@ -210,7 +210,7 @@
   },
   "MakaiCookingAction": {
     "TEXT": [
-      " 消耗 。"
+      "消耗。"
     ]
   },
   "NormaAction": {
@@ -220,7 +220,7 @@
   },
   "OtherworldCallAction": {
     "TEXT": [
-      "选择 ", "  张恶魔牌消耗  .", "我的抽牌堆里没有恶魔牌..."
+      "选择 ", "  张恶魔牌消耗。", "我的抽牌堆里没有恶魔牌..."
     ]
   },
   "NatalieAction": {
@@ -246,22 +246,28 @@
   },
   "SpookyPhenomenonAction": {
     "TEXT": [
-      " 消耗。"
+      "消耗。"
     ]
   },
   "FedoraAction": {
     "TEXT": [
-      " 消耗。"
+      "消耗。"
     ]
   },
   "TenguBlazeAction": {
     "TEXT": [
-      " 消耗。"
+      "消耗。"
     ]
   },
   "UndeadWorldAction": {
     "TEXT": [
       "选择一张不死牌加入到你的手牌.", "我的消耗牌堆中没有不死牌..."
+    ]
+  },
+
+  "HeroCrystalText": {
+    "TEXT": [
+      "查看英杰卡牌。"
     ]
   }
 }
