Translation files updated as of 9/04/22

--- a/localization/eng/AigisMod-Keyword-Strings.json
+++ b/localization/eng/AigisMod-Keyword-Strings.json
@@ -226,6 +226,63 @@
       "magical_ignition"
     ],
     "DESCRIPTION": "At the start of the combat, add #yShield #yof #yRawal and #ySpear #yof #yRawal to the Draw Pile. These have the same amount of upgrades as this card."
+  },
+  {
+    "PROPER_NAME": "Meteor",
+    "NAMES": [
+      "Meteor",
+      "Meteor.",
+      "meteor",
+      "meteor."
+    ],
+    "DESCRIPTION": "Passive: deal damage to a random enemy. Triggered when you play an Attack with Meteor keyword or a Strike card."
+  },
+  {
+    "PROPER_NAME": "Dark Fighter",
+    "NAMES": [
+      "Dark Fighter",
+      "Dark Fighter.",
+      "Dark_Fighter",
+      "dark_fighter"
+    ],
+    "DESCRIPTION": "While this is in your hand when you gain Block reduce this card cost by 1 for the turn."
+  },
+  {
+    "PROPER_NAME": "Lifelink",
+    "NAMES": [
+      "Lifelink",
+      "Lifelink.",
+      "lifelink",
+      "lifelink."
+    ],
+    "DESCRIPTION": "Each time you receive damage this enemy loses HP equal to that damage. Reduced by 1 when you use a cost 2 or higher Attack."
+  },
+  {
+    "PROPER_NAME": "Fortress",
+    "NAMES": [
+      "Fortress",
+      "Fortress:"
+
+    ],
+    "DESCRIPTION": "Gain this effect when your Block is equal or higher than this amount."
+  },
+  {
+    "PROPER_NAME": "Armor",
+    "NAMES": [
+      "Armor",
+      "Armor:"
+
+    ],
+    "DESCRIPTION": "Unplayable unless your Block is equal or higher than this amount."
+  },
+  {
+    "PROPER_NAME": "Release",
+    "NAMES": [
+      "Release",
+      "Release:"
+
+    ],
+    "DESCRIPTION": "Gain this effect when your block is 0 or while you have Blur/Barricade"
   }
 
 ]
