--- a/localization/eng/AigisMod-UI-Strings.json
+++ b/localization/eng/AigisMod-UI-Strings.json
@@ -156,7 +156,7 @@
   },
   "AuroraAction": {
     "TEXT": [
-      "Select cards to Exhausts. (Optional)"
+      "Select card(s) to Exhausts. (Optional)"
     ]
   },
   "WhiteDevotionAction": {
