--- a/localization/jpn/AigisMod-Power-Strings.json
+++ b/localization/jpn/AigisMod-Power-Strings.json
@@ -76,8 +76,8 @@
 
         "aigisMod:BloomPetal": {
                 "NAME": "ブルームペタル",
-                "DESCRIPTIONS": [" #b", " ターン後に、すべての敵に #b", " のダメージと #b2 #y脱力 and #b2 #y弱体 を与え、その後このパワーは取り除かれる。",
-                                 "ターン終了時に、すべての敵に #b", " のダメージと #b2 #y脱力 and #b2 #y弱体 を与え、その後このパワーは取り除かれる。"]
+                "DESCRIPTIONS": [" #b", " ターン後に、すべての敵に #b", " のダメージと #b2 #y脱力 と #b2 #y弱体 を与え、このパワーは取り除かれる。",
+                                 "ターン終了時に、すべての敵に #b", " のダメージと #b2 #y脱力 と #b2 #y弱体 を与え、このパワーは取り除かれる。"]
         },
         "aigisMod:CalamityAverting": {
                 "NAME": "避禍予見",
@@ -167,6 +167,14 @@
                 "NAME": "魔界料理人",
                 "DESCRIPTIONS": ["ターン終了時に #y手札 の #yデーモン を #b1 枚廃棄して #y筋力 #b", " を得ることができる。"]
         },
+        "aigisMod:BarricadeInstallation": {
+                "NAME": "バリケード設置",
+                "DESCRIPTIONS": ["ターン開始時、カードを #b"," 枚捨てることができる。 捨てた枚数分の #yバリケード を 1 枚 #y手札 に 加え。"]
+        },
+        "aigisMod:ExplosiveBarricade": {
+                "NAME": "炸裂バリケード用意！",
+                "DESCRIPTIONS": ["#yバリケード をプレイした時、ランダムな敵に #b"," ダメージを 与える。"]
+        },
         "aigisMod:OtherworldCall": {
                 "NAME": "異界召喚",
                 "DESCRIPTIONS": ["ターン終了時に、 #y山札 の #yデーモン を #b", " 枚廃棄することができる"]
@@ -201,7 +209,7 @@
         },
         "aigisMod:Burn": {
                 "NAME": "バーン",
-                "DESCRIPTIONS": ["あなたのターン終了時に、 敵が攻撃を予定していた場合、 #yダメージ #b", " を与える。 バーンは次のターン開始時に取り除かれる。"]
+                "DESCRIPTIONS": ["あなたのターン終了時に、 敵が攻撃を予定していた場合、 #yダメージ #b", " を与える。 バーンはターン開始時に #b1 減少する 。"]
         },
         "aigisMod:Golemology": {
                 "NAME": "ゴーレム学",
