--- a/localization/jpn/AigisMod-Card-Strings.json
+++ b/localization/jpn/AigisMod-Card-Strings.json
@@ -504,8 +504,8 @@
   },
   "aigisMod:Ignis": {
     "NAME": "イグニス",
-    "DESCRIPTION": "!B! ブロック を得る。 NL 活力 !M! を得る。 NL aigismod:バーン !M! を得る。",
-    "UPGRADE_DESCRIPTION": "!B! ブロック を得る。 NL 活力 !M! を得る。 NL aigismod:バーン !M! を得る。",
+    "DESCRIPTION": "!B! ブロック を得る。 NL 活力 !M! を得る。 NL aigismod:バーン !M! を与える。",
+    "UPGRADE_DESCRIPTION": "!B! ブロック を得る。 NL 活力 !M! を得る。 NL aigismod:バーン !M! を与える。",
     "EXTENDED_DESCRIPTION" : [
       "火竜の"
     ]
@@ -1283,8 +1283,8 @@
   },
   "aigisMod:Patricia": {
     "NAME": "パトリシア",
-    "DESCRIPTION": "手札にバリケードを NL 1 枚 手札に加える。",
-    "UPGRADE_DESCRIPTION": "手札にバリケードを NL 1 枚 手札に加える。 NL 全ての敵に 脱力 !M! を与える。",
+    "DESCRIPTION": "ターン開始時、カードを 1 枚捨ててバリケードを 1 枚 手札に加えることができる。",
+    "UPGRADE_DESCRIPTION": "全ての敵に 脱力 2 を NL 与える。 NL ターン開始時、カードを NL 1 枚捨ててバリケードを 1 枚 手札に加えることができる。",
     "EXTENDED_DESCRIPTION" : [
       "帝国防塞工兵"
     ]
@@ -1369,7 +1369,7 @@
   "aigisMod:Leora": {
     "NAME": "レオラ",
     "DESCRIPTION": "ターン終了時に [E] が 0 の時、手札の帝国カードを 1 枚プレイできる。",
-    "UPGRADE_DESCRIPTION": "筋力 1 を得る。 NL ターン終了時に [E] が 0 の時、手札の帝国カードを 1 枚プレイできる。",
+    "UPGRADE_DESCRIPTION": "筋力 2 を得る。 NL ターン終了時に [E] が 0 の時、手札の帝国カードを 1 枚プレイできる。",
     "EXTENDED_DESCRIPTION" : [
       "帝国元帥"
     ]
@@ -1514,16 +1514,16 @@
   },
   "aigisMod:Viola": {
     "NAME": "ヴィオラ",
-    "DESCRIPTION": "aigismod:帝国騎士 : このターン 筋力 2 を得る。 NL デッキの帝国キャラアタックカードの数だけ全ての敵に !D! ダメージを与える。 NL ( !M! 回)",
-    "UPGRADE_DESCRIPTION": "aigismod:帝国騎士 : このターン 筋力 4 を得る。 NL デッキの帝国キャラアタックカードの数だけ全ての敵に !D! ダメージを与える。 NL ( !M! 回)",
+    "DESCRIPTION": "aigismod:帝国騎士 : このターン 筋力 2 を得る。 NL デッキの帝国パワーカードの数だけ全ての敵に !D! ダメージを与える。 NL ( !M! 回)",
+    "UPGRADE_DESCRIPTION": "aigismod:帝国騎士 : このターン 筋力 4 を得る。 NL デッキの帝国パワーカードの数だけ全ての敵に !D! ダメージを与える。 NL ( !M! 回)",
     "EXTENDED_DESCRIPTION" : [
       "帝国騎士"
     ]
   },
   "aigisMod:Lux": {
     "NAME": "ルークス",
-    "DESCRIPTION": "aigismod:帝国騎士 : ランダムな敵に 6 固定のダメージを与える。 NL デッキの帝国キャラアタックカードの数だけ全ての敵に !D! ダメージを与える。 NL( !M! 回)",
-    "UPGRADE_DESCRIPTION": "aigismod:帝国騎士 : ランダムな敵に 9 固定のダメージを与える。 NL デッキの帝国キャラアタックカードの数だけ全ての敵に !D! ダメージを与える。 NL( !M! 回)",
+    "DESCRIPTION": "エセリアル NL aigismod:帝国騎士 : ランダムな敵に 6 固定のダメージを与える。 NL デッキのストライクの数だけ全ての敵に !D! ダメージを与える。 NL ( !M! 回)",
+    "UPGRADE_DESCRIPTION": "aigismod:帝国騎士 : ランダムな敵に 9 固定のダメージを与える。 NL デッキのストライクと防御の数だけ全ての敵に !D! ダメージを与える。 NL ( !M! 回)",
     "EXTENDED_DESCRIPTION" : [
       "帝国騎士"
     ]
@@ -1627,7 +1627,8 @@
     "DESCRIPTION": "ターン終了時、手札を 1 枚 を廃棄し アーティファクト 1 を得ることができる。 !M! 回発動できる。",
     "UPGRADE_DESCRIPTION": "全ての 状態異常 を 廃棄 する。 NL ターン終了時、手札を 1 枚 を廃棄し アーティファクト 1 を得ることができる。 !M! 回発動できる。",
     "EXTENDED_DESCRIPTION" : [
-      "帝国司教"
+      "帝国司教",
+      "ターン終了時、手札を 1 枚 を廃棄し アーティファクト 1 を得ることができる。 !M! 回発動できる。"
     ]
   },
   "aigisMod:Hecatie": {
@@ -1668,7 +1669,8 @@
     "DESCRIPTION": "aigismod:ダメージオーラ !M! を得る NL 1 ターンに 1 回、帝国カードをプレイした時、デッキ内の ランダムな 状態異常 を 1 枚 廃棄 する。",
     "UPGRADE_DESCRIPTION": "aigismod:ダメージオーラ !M! を得る NL 1 ターンに 1 回、帝国カードをプレイした時、デッキ内の ランダムな 状態異常 を 1 枚 廃棄 する。",
     "EXTENDED_DESCRIPTION" : [
-      "彷徨の幻獣使い"
+      "彷徨の幻獣使い",
+      "aigismod:ダメージオーラ !M! を得る NL 1 ターンに 1 回、帝国カードをプレイした時、デッキ内の ランダムな 状態異常 を 1 枚 廃棄 する。"
     ]
   },
   "aigisMod:Keitridge": {
@@ -2004,7 +2006,7 @@
   "aigisMod:Tanya": {
     "NAME": "ターニャ",
     "DESCRIPTION": "カードを 2 枚引く。 NL !M! ゴールドを得る。 NL 廃棄",
-    "UPGRADE_DESCRIPTION": "カードを 2 枚引く。 NL [E] を得る。 NL ゴールドを得る。 NL 廃棄",
+    "UPGRADE_DESCRIPTION": "カードを 2 枚引く。 NL [E] を得る。 NL !M! ゴールドを得る。 NL 廃棄",
     "EXTENDED_DESCRIPTION" : [
       "帝国商人"
     ]
@@ -2066,6 +2068,47 @@
     "EXTENDED_DESCRIPTION" : [
       "帝国教導隊長",
       " !B! ブロック を得る。 NL 防御の効果が 1 上昇する。 NL 次のターン、 [E] [E] を得る。"
+    ]
+  },
+  "aigisMod:Marleen": {
+    "NAME": "マルレーン",
+    "DESCRIPTION": "バリケードをプレイした時、ランダムな敵に !M! ダメージを NL 与える。 NL 手札にバリケードを 1 枚 手札に加える。",
+    "UPGRADE_DESCRIPTION": "バリケードをプレイした時、ランダムな敵に !M! ダメージを NL 与える。 NL 手札にバリケードを 1 枚 手札に加える。",
+    "EXTENDED_DESCRIPTION" : [
+      "帝国建機工兵"
+    ]
+  },
+  "aigisMod:Laura": {
+    "NAME": "ラウラ",
+    "DESCRIPTION": "aigismod:仮初 のHP !M! を得る。 NL キャラカード を 捨て札から !aigisMod:SecondMagic! 枚 廃棄 NL できる。",
+    "UPGRADE_DESCRIPTION": "aigismod:仮初 のHP !M! を得る。 NL キャラカード を 捨て札から !aigisMod:SecondMagic! 枚 廃棄 NL できる。",
+    "EXTENDED_DESCRIPTION" : [
+      "白の竜巫女",
+      "aigismod:仮初 のHP !M! を得る。 NL キャラカード を 捨て札から !aigisMod:SecondMagic! 枚まで 廃棄 できる。"
+    ]
+  },
+  "aigisMod:Lehne": {
+    "NAME": "レーネ",
+    "DESCRIPTION": "!D! ダメージを与える。 NL 山札からランダムな帝国カード1枚を手札に加える。",
+    "UPGRADE_DESCRIPTION": "!D! ダメージを 2 回 NL 与える。 NL 山札からランダムな帝国カード1枚を手札に加える。",
+    "EXTENDED_DESCRIPTION" : [
+      "帝都の大泥棒"
+    ]
+  },
+  "aigisMod:Kaoru": {
+    "NAME": "カオル",
+    "DESCRIPTION": "カードを 1 枚捨て、 NL そのコストの値同じ 筋力 を得る。 NL 帝国カード を捨てた場合 !B! ブロック を得る。",
+    "UPGRADE_DESCRIPTION": "カードを 1 枚捨て、 NL そのコストの同じ 筋力 を得る。 NL 帝国カード を捨てた場合 !B! ブロック を得る。",
+    "EXTENDED_DESCRIPTION" : [
+      "帝国戦巫女"
+    ]
+  },
+  "aigisMod:Irmgard": {
+    "NAME": "イルムガルト",
+    "DESCRIPTION": "山札の デーモン を 1 枚 廃棄 して、 カードを !M! 枚引く。",
+    "UPGRADE_DESCRIPTION": "山札の デーモン を 1 枚 廃棄 して、 カードを !M! 枚引く。",
+    "EXTENDED_DESCRIPTION" : [
+      "闇炎の魔将"
     ]
   },
 
@@ -2526,7 +2569,7 @@
     "UPGRADE_DESCRIPTION": "16 ブロック を得る。 あなたのブロック数に等しい aigismod:拡散 ダメージを与える。",
     "EXTENDED_DESCRIPTION" : [
       "魔導鎧姫",
-      "10 ブロック を得る。 あなたのブロック数に等しい aigismod:拡散 を与える。Nl ブラー 1 を得る。"
+      "10 ブロック を得る。 あなたのブロック数に等しい aigismod:拡散 を与える。NL ブラー 1 を得る。"
     ]
   },
   "aigisMod:Leaf": {
