--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -3,7 +3,7 @@
     "NAME": "看板娘の勧誘",
     "FLAVOR": "「お店、結構人気ですよぉ？」-ジュノン",
     "DESCRIPTIONS": [
-      "アップグレードされた #yジュノン を #b1 枚入手する。通常戦、エリート戦でコモンのみの #yカード #y報酬が増える"
+      "アップグレードされた #yジュノン を #b1 枚入手する。通常戦、エリート戦でコモンのみの #yカード #y報酬 が増える"
     ]
   },
   "aigisMod:HappyWishes": {
@@ -217,7 +217,7 @@
     "NAME": "アダマスに選ばれし者",
     "FLAVOR": "「……負ければ、すべてを失う。自らの名誉や地位だけでなく、大切な者も、守るべき最愛の存在も…」-皇帝",
     "DESCRIPTIONS": [
-      "#yストライク と #y防御のコストが #b0 になる。"
+      "#yストライク と #y防御 のコストが #b0 になる。"
     ]
   },
   "aigisMod:AerialFight": {
@@ -257,7 +257,7 @@
     "NAME": "元巡回牧師",
     "FLAVOR": "「ある日、俺が仕事から家に帰って見たものは、ヴァンパイアに襲撃され、噛まれた妻と娘だった」-ヴィンセント",
     "DESCRIPTIONS": [
-      "1戦闘に1回、 このレリックを #y右クリック することで手札 #b1 枚 を #y廃棄 できる。 そのカードが  #yアンデッド キャラクターの時、 コストと等しい [E] を得る。"
+      "1戦闘に1回、 このレリックを #y右クリック することで手札 #b1 枚 を #y廃棄 できる。 そのカードが #yアンデッド キャラクターの時、 コストと等しい [E] を得る。"
     ]
   },
   "aigisMod:DeathCurse": {
@@ -328,7 +328,7 @@
     "FLAVOR": "「人間の体って不便だわぁ。これが生きるってことなのね。」-メトゥス",
     "DESCRIPTIONS": [
       "戦闘開始時、 #yスケルトン #b3 枚と #yメトゥス #b1 枚を廃棄山に加える。 ",
-      "１戦闘に1回、 HPが最大の #b30% ?以下の時、このレリックを #y右クリック することで、廃棄山の #yアンデッド #b1 枚を手札に加える"
+      "１戦闘に1回、 HPが最大の #b30% 以下の時、このレリックを #y右クリック することで、廃棄山の #yアンデッド #b1 枚を手札に加える"
     ]
   },
   "aigisMod:Daywalker": {
