--- a/localization/jpn/AigisMod-Power-Strings.json
+++ b/localization/jpn/AigisMod-Power-Strings.json
@@ -6,7 +6,7 @@
 
         "aigisMod:Geotoken": {
                 "NAME": "ジオトークン",
-                "DESCRIPTIONS": ["ターン終了時に、一時的なHP #b" , " を得る。"]
+                "DESCRIPTIONS": ["ターン終了時に、仮初のHP #b" , " を得る。"]
         },
 
         "aigisMod:DamageAura": {
@@ -41,12 +41,12 @@
 
         "aigisMod:ArmorSmith": {
                 "NAME": "鎧職人",
-                "DESCRIPTIONS": ["ターン開始時に、 手札の英傑ではないカード #b", " 枚をアップグレードする。"]
+                "DESCRIPTIONS": ["ターン開始時に、 手札の英傑ではないスキルカード #b", " 枚をアップグレードする。"]
         },
 
         "aigisMod:SwordSmith": {
                 "NAME": "武器職人",
-                "DESCRIPTIONS": ["ターン開始時に、 手札の英傑ではないカード #b", " 枚をアップグレードする。"]
+                "DESCRIPTIONS": ["ターン開始時に、 手札の英傑ではないアタックカード #b", " 枚をアップグレードする。"]
         },
 
         "aigisMod:RagingFlameFormation": {
@@ -129,7 +129,7 @@
         },
         "aigisMod:VictorySword": {
                 "NAME": "勝利の剣",
-                "DESCRIPTIONS": [" 1 ターンに一度、#y白の帝国 #キャラクター をプレイした時、ドロー #b", "このターンすでに発動している。"]
+                "DESCRIPTIONS": [" 1 ターンに一度、#y白の帝国 #yキャラクター をプレイした時、ドロー #b", "このターンすでに発動している。"]
         },
         "aigisMod:ImperialCooking": {
                 "NAME": "帝国式調理術",
@@ -169,7 +169,7 @@
         },
         "aigisMod:BarricadeInstallation": {
                 "NAME": "バリケード設置",
-                "DESCRIPTIONS": ["ターン開始時、カードを #b"," 枚捨てることができる。 捨てた枚数分の #yバリケード を 1 枚 #y手札 に 加え。"]
+                "DESCRIPTIONS": ["ターン開始時、カードを #b"," 枚捨てることができる。 捨てた枚数分の #yバリケード を 1 枚 #y手札 に 加える。"]
         },
         "aigisMod:ExplosiveBarricade": {
                 "NAME": "炸裂バリケード用意！",
@@ -225,7 +225,7 @@
         },
         "aigisMod:CursedWhirlwind": {
                 "NAME": "呪爪つむじ風",
-                "DESCRIPTIONS": ["呪いを #y廃棄 した時、 すべての敵は #筋力 #b", " を失う。"]
+                "DESCRIPTIONS": ["呪いを #y廃棄 した時、 すべての敵は #y筋力 #b", " を失う。"]
         },
         "aigisMod:CursedClaws": {
                 "NAME": "怨嗟の爪",
@@ -240,8 +240,8 @@
                 "DESCRIPTIONS": ["あなたのターン終了時に デッキ内の呪いのカードの数だけ #b", " #yブロック を得る。"]
         },
         "aigisMod:DragonWrath": {
-                "NAME": "炎竜の怒り",
-                "DESCRIPTIONS": ["あなたのターン終了時、すべての敵は #デバフ の #スタック の数だけ #yHP #b", " を失う。"]
+                "NAME": "古代龍の逆鱗",
+                "DESCRIPTIONS": ["あなたのターン終了時、すべての敵は #yデバフ の #yスタック の数だけ #yHP #b", " を失う。"]
         },
         "aigisMod:FlameExorcism": {
                 "NAME": "破魔の炎",
